# ProteoformNetworks

./: .env  .gitignore  LICENSE  README.md  dataset.hpp  requirements.txt
1_Node_Degree_Reduction/: README.md
1_Node_Degree_Reduction/data/: all__link_percolation_curve_approximation.csv  mm__link_percolation_curve_approximation.csv  mm__node_percolation_curve_approximation.csv  mm_link_group1_freq.csv  mm_link_group2.csv  mm_link_group2_freq.csv  mm_link_group2_mod.csv  mm_link_group2_p_freq.csv  mm_link_group2_tlp_freq.csv  mm_link_groups.csv  mm_link_mod.csv  sections__link_percolation_curve_approximation.csv
1_Node_Degree_Reduction/src/: make_percolation_analysis.R  temp.R  (+1 more)
4_Key_PTMs_Overlaps/: Replication.md
diseaseModules/: load_disease_modules.R  statistics.md
docs/: Replication.md
reports/: Reports.xlsx
src/: .gitignore  README.md  graphs.R  load_disease_modules.R  main.cpp  network_overlap.cpp  overlap.cpp  overlap.hpp  pathway_overlap.cpp  pathway_overlap.h  phenotype_overlap.cpp
src/Cpp/: CMakeLists.txt  DataSet.cpp  DataSet.hpp  Entity.hpp  EntitySet.hpp  Interactome.cpp  Interactome.hpp  Module.cpp  Module.hpp  TODO  ToDo  algorithm.hpp  artefactual_overlap.cpp  artefactual_overlap.hpp  bimap.cpp  bimap.hpp  config.hpp  create_modules.cpp  create_modules.hpp  degree.cpp  degree.hpp  degree_reduction.cpp  degree_reduction.hpp  entity.cpp  entity.h  entity.hpp  gene_level_only_overlap.cpp  gene_level_only_overlap.hpp  graph.hpp  main.cpp  modified_overlap.cpp  modified_overlap.hpp  overlap.cpp  overlap.hpp  overlap_analysis.cpp  overlap_analysis.hpp  percolation.cpp  percolation.hpp  phegeni.cpp  phegeni.hpp  (+12 more)
src/Cpp/1_degree_reduction/: degree_reduction.hpp
src/Cpp/2_percolation/: percolation.cpp  percolation.hpp
src/Cpp/3_artefactual_overlap/: artefactual_overlap.cpp  artefactual_overlap.hpp
src/Cpp/4_modified_overlap/: Replication.md  modified_overlap.hpp
src/Cpp/Google_tests/: CMakeLists.txt  TODO  bimap_tests.cpp  conversions_read_mapping_tests.cpp  conversions_test.cpp  conversions_tests.cpp  create_modules_tests.cpp  interactome_tests.cpp  main_test.cpp  module_tests.cpp  networks_tests.cpp  overlap_analysis_tests.cpp  phegeni_convert_modules_tests.cpp  phegeni_create_protein_modules_tests.cpp  phegeni_tests.cpp  reactome_tests.cpp  scores_tests.cpp
src/Cpp/Google_tests/resources/: PheGenI_Association_genome_wide_significant_slice.txt  example_interactions.csv  example_modules.csv  gene_interactions.tab  genes_slice.csv  mapping_protein_to_genes_slice.tab  proteinInternalEdges_slice.tsv  proteins_slice.csv  proteoform_search_slice.tsv
src/Cpp/Google_tests/resources/createPheGenIModules/: gene_interactions.csv  genes.csv  mapping_genes_to_proteins.csv  mapping_proteins_to_proteoforms.csv  modules.csv  protein_interactions.csv  proteins.csv  proteoform_interactions.csv  proteoforms.csv
src/Cpp/base/: CMakeLists.txt  algorithm.h  array.h  atomic.h  bits.h  bitset.h  coding.h  compressed.h  example_bitset.cpp  example_bitset.hpp  functional.h  integer.h  intrinsic.h  iterator.h  memory.h  numeric.h  process.h  simd.h  struct.h  vector.h
src/Cpp/networks_lib/: CMakeLists.txt  Interactome.cpp  Interactome.hpp  bimap_str_int.cpp  bimap_str_int.hpp  conversions.cpp  conversions.hpp  maps.cpp  maps.hpp  networks.cpp  networks.hpp  overlap.cpp  overlap.hpp  overlap_types.hpp  phegeni.cpp  phegeni.hpp  reactome.cpp  reactome.hpp  scores.cpp  scores.hpp  strings.hpp  types.cpp  types.hpp
src/Cpp/others/: DataSet.cpp  DataSet.hpp  degree.cpp  degree.hpp  entity.hpp  gene_level_only_overlap.cpp  gene_level_only_overlap.hpp  modified_overlap.cpp  modified_overlap.hpp  percolation.hpp  phegeni.cpp  phegeni.hpp  proteoform.cpp  proteoform.hpp  reactome.cpp  reactome.hpp  report.hpp  types.hpp  uniprot.cpp  uniprot.hpp
src/Cpp/tests/: overlap_analysis_tests.cpp
src/Cpp/tools/: files.cpp  files.hpp
(+220 files in other folders)
